test/TestSuite/Syntax/Errors/misaligned_date.tjp
project test "Test" "1.0" 2007-08-26 +1w {
  timingresolution 20 min
}

# MARK: error 6 misaligned_date
vacation "Day off" 2007-08-27-18:15

